datasets/dataset_txt/requests/requests_2325.txt
sybrenstuvel commented on Nov 18, 2012
I'm trying out Request's OAuth support on Python 3.2. The following code:
import requests
from requests.auth import OAuth1

url = 'https://api.twitter.com/1/account/settings.json'

queryoauth = OAuth1('client_key', 'client_secret',
                    'resource_owner_key', 'resource_owner_secret',
                    signature_type='query')
r = requests.get(url, auth=queryoauth)
gives me this error:
Traceback (most recent call last):
  File "simple_oauth_test.py", line 8, in <module>
    signature_type='query')
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/auth.py", line 68, in __init__
    self.client = Client(client_key, client_secret, resource_owner_key,
NameError: global name 'Client' is not defined
requests/auth.py contains the following:
try:
    from ._oauth import (Client, SIGNATURE_HMAC, SIGNATURE_TYPE_AUTH_HEADER, extract_params)

except (ImportError, SyntaxError):
    SIGNATURE_HMAC = None
    SIGNATURE_TYPE_AUTH_HEADER = None
Removing the try/except clause to show the actual import error gives me this:
Traceback (most recent call last):
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/_oauth.py", line 15, in <module>
    from oauthlib.oauth1 import rfc5849
ImportError: No module named oauthlib.oauth1

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "simple_oauth_test.py", line 1, in <module>
    import requests
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/__init__.py", line 53, in <module>
    from .models import Request, Response
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/models.py", line 19, in <module>
    from .auth import HTTPBasicAuth, HTTPProxyAuth
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/auth.py", line 22, in <module>
    from ._oauth import (Client, SIGNATURE_HMAC, SIGNATURE_TYPE_AUTH_HEADER, extract_params)
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/_oauth.py", line 22, in <module>
    from oauthlib.oauth1 import rfc5849
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/packages/oauthlib/oauth1/__init__.py", line 12, in <module>
    from .rfc5849 import Client, Server
  File "/home/sybren/.virtualenvs/flickrapi-py32/lib/python3.2/site-packages/requests-0.14.1-py3.2.egg/requests/packages/oauthlib/oauth1/rfc5849/__init__.py", line 22
    SIGNATURE_HMAC = u"HMAC-SHA1"
                                ^
SyntaxError: invalid syntax
String literals with a u-prefix are not supported for Python 3.x before 3.3. Since the largest install base of 3.x still runs on 3.2 (I'm assuming, given the recent release date of 3.3) it would be very nice if we could use OAuth on Python 3.2.